--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,34 +6,28 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
         curl \
         git \
         sudo \
-        nodejs \
-        npm 
+    && curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+    && apt-get install -y nodejs \
+    && npm install -g npm@latest \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
 # Create the user
 ARG USERNAME=vscode
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 
-# Create the user
 RUN groupadd --gid $USER_GID $USERNAME \
     && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME \
     && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
     && chmod 0440 /etc/sudoers.d/$USERNAME
 
-# Set work directory
-WORKDIR /app
+WORKDIR /workspace
 
 # Install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
-COPY . .
-
-# Change to non-root user
 USER $USERNAME
 
-# Expose port
 EXPOSE 8000
-
-# Run the application
-CMD ["python", "run.py"]
